--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="myDIV" class="header">
   <h2 class="styling">My To Do List</h2>
 
-   <input class= "myInput" type="text" id="myInput" placeholder="What to do?.."> 
+  <input class= "myInput"type="text" id="myInput" placeholder="Title...">
   <span onclick="newElement()" class="addBtn" id="addBt">Add</span>
 </div>
 
@@ -15,7 +15,7 @@
 <ul id="myUL">
   
   
-  <li>Make a to-do list</li>
+  <li>My to do list</li>
   
   
   
